# depot

./: Cargo.toml  README.md  backup.sh  install.sh
example-profile/: config.toml
example-profile/templates/: index.html.tera
src/: main.rs
