[package]
name = "depot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket-basicauth = "2"
clap = { version = "3.0.13", features = ["derive"] }
clap_complete = "3.0.5"
home = "0.5.3"
dirs = "1.0.5"
sanitizer = { version = "0.1", features = ["derive"] }
urlencoding = "2.1.2"
rand = "0.8.5"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]
